Development
	Don't resize the video window automatically after first video played
	Quiet the output from the app when -v option not specified
	Updated RAM parser
	Allow enabling and disabling of plugin emulation via the Edit->Preferences (Plugin) tab
	Reenable play button when autopaused and stop, prev or next is clicked
	Only disable screen saver when we play a video
	Implement GetPlayState dbus method
	DVD and DVD with menu support improved playlist support
	Redo the randomization backend
	Add loop control as a menu option Edit->Loop Playlist
	Use private dbus connection
0.5.0
	If filename is not specified on playlist save then assume .pls
	Redo the path to items on playlist code
	Fix up playlist loading so it can handle items where the playlist is specified as a fully qualified filename
		and items in the playlist are not
	Implement drag and drop of multiple files to the main window, play if only one
	Implement drag and drop of multiple files to the playlist
	Autodetection and loading of m3u playlists
	Implement many of the suggestions from JP at Zenwalk
	Add verbose flag to edit->preferences dialog
	Fix app icon selection code, it was not loading it properly from the theme
	Add directory remembering to Save and Load Playlist dialogs
	Add Add and Remove buttons to the playlist window
	Split playlist code into its own module
	Fix several problems with the GUI crashing and clean up a couple of minor issues
	Change priority of thread polling to low
	When given a url to play and under control of gecko-mediaplayer pass -user-agent NSPlayer to mplayer
	Add support for real media pnm:// urls
	Make the GUI responsive while caching from a website
	Enable setting random playback from "Edit" menu
	Add playlist loading
	Add playlist saving to .pls file type
	Fix problem with reference playlist where files had Ref prefix
	When playlist is dropped on window or playlist viewer, don't autoplay, but setup to start at first item, unless random